--- a/grandma.html
+++ b/grandma.html
@@ -12,7 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>I Quit Smoking - Jess Sung Photography</title>
+	<title>Grandma - Jess Sung Photography</title>
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
@@ -153,32 +153,91 @@
     </header>
 	<div class="photos">
 		<div class="photo">
-			<img src="./i-quit-smoking/image00001.jpeg">
-		</div>
-		
-		<div class="photo">
-			<img src="./i-quit-smoking/image00003.jpeg">
+			<img src="./grandma/image00001.jpeg">
 		</div>
 		<div class="photo">
-			<img src="./i-quit-smoking/image00004.jpeg">
+			<img src="./grandma/image00002.jpeg">
 		</div>
 		<div class="photo">
-			<img src="./i-quit-smoking/image00005.jpeg">
+			<img src="./grandma/image00003.jpeg">
 		</div>
 		<div class="photo">
-			<img src="./i-quit-smoking/image00006.jpeg">
-		</div>
-		
-		<div class="photo">
-			<img src="./i-quit-smoking/image00008.jpeg">
-		</div>
-		
-		
-		<div class="photo">
-			<img src="./i-quit-smoking/image00013.jpeg">
+			<img src="./grandma/image00004.jpeg">
 		</div>
 		<div class="photo">
-			<img src="./i-quit-smoking/image00014.jpeg">
+			<img src="./grandma/image00005.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00006.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00007.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00008.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00009.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00010.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00011.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00012.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00013.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00014.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00015.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00016.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00017.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00018.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00019.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00020.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00021.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00022.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00031.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00032.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00033.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00034.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00035.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00036.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./grandma/image00037.jpeg">
 		</div>
 	</div>
 	<div class="low-icon">
