--- a/index.html
+++ b/index.html
@@ -156,18 +156,14 @@
 		<div class="photo">
 			<img src="./frontpage/0017_15A1.jpg">
 		</div>
-		<div class="photo">
-			<img src="./frontpage/2017-09-01-0012.jpg">
-		</div>
+		
 		<div class="photo">
 			<img src="./frontpage/2017-09-07-0024.jpg">
 		</div>
 		<div class="photo">
 			<img src="./frontpage/2017-09-14-0050.jpg">
 		</div>
-		<div class="photo">
-			<img src="./frontpage/2018-05-19-0035.jpg">
-		</div>
+		
 		<div class="photo">
 			<img src="./frontpage/2018-06-06-0047.jpg">
 		</div>
@@ -175,16 +171,7 @@
 			<img src="./frontpage/2017-09-09-0016.jpg">
 		</div>
 		<div class="photo">
-			<img src="./frontpage/2018-06-06-0055-2.jpg">
-		</div>
-		<div class="photo">
-			<img src="./frontpage/2018-07-06-0019.jpg">
-		</div>
-		<div class="photo">
-			<img src="./frontpage/2018-08-21-0015-3.jpg">
-		</div>
-		<div class="photo">
-			<img src="./frontpage/2018-08-21-0032.jpg">
+			<img src="./i-quit-smoking/image00004.jpeg">
 		</div>
 		<div class="photo">
 			<img src="./frontpage/2018-08-22-0033.jpg">
