--- a/fine-china.html
+++ b/fine-china.html
@@ -12,7 +12,7 @@
 	  gtag('config', 'UA-116277545-2');
 	</script>
 
-	<title>I Quit Smoking - Jess Sung Photography</title>
+	<title>Fine China - Jess Sung Photography</title>
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Inconsolata|Rokkitt" rel="stylesheet">
@@ -153,33 +153,30 @@
     </header>
 	<div class="photos">
 		<div class="photo">
-			<img src="./i-quit-smoking/image00001.jpeg">
+			<img src="./fine-china/image00023.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./fine-china/image00024.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./fine-china/image00025.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./fine-china/image00026.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./fine-china/image00027.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./fine-china/image00028.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./fine-china/image00029.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./fine-china/image00030.jpeg">
 		</div>
 		
-		<div class="photo">
-			<img src="./i-quit-smoking/image00003.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./i-quit-smoking/image00004.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./i-quit-smoking/image00005.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./i-quit-smoking/image00006.jpeg">
-		</div>
-		
-		<div class="photo">
-			<img src="./i-quit-smoking/image00008.jpeg">
-		</div>
-		
-		
-		<div class="photo">
-			<img src="./i-quit-smoking/image00013.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./i-quit-smoking/image00014.jpeg">
-		</div>
 	</div>
 	<div class="low-icon">
 		<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en"><img class="insta-icon" src="insta-icon.png"></a>
