--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			<img src="./frontpage/2018-06-06-0047.jpg">
 		</div>
 		<div class="photo">
-			<img src="./frontpage/2017-09-09-0016.jpg">
+			<img src="./frontpage/2017-09-0016.jpg">
 		</div>
 		<div class="photo">
 			<img src="./i-quit-smoking/image00004.jpeg">
