--- a/bachelor-bachelorette.html
+++ b/bachelor-bachelorette.html
@@ -153,49 +153,28 @@
     </header>
 	<div class="photos">
 		<div class="photo">
-			<img src="./bachelor-bachelorette/2018-08-20-0046.jpeg">
+			<img src="./bachelor-bachelorette/image.jpeg">
+		</div>
+		<div class="photo">
+			<img src="./bachelor-bachelorette/2018-08-20-0046.jpg">
 		</div>
 		<div class="photo">
 			<img src="./bachelor-bachelorette/2018-08-21-0001.jpg">
 		</div>
 		<div class="photo">
-			<img src="./bachelor-bachelorette/image-4.jpeg">
+			<img src="./bachelor-bachelorette/2018-08-21-0002.jpg">
 		</div>
 		<div class="photo">
-			<img src="./bachelor-bachelorette/image-2.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./bachelor-bachelorette/image-5.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./bachelor-bachelorette/image-3.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./bachelor-bachelorette/image.jpeg">
+			<img src="./bachelor-bachelorette/image-11.jpeg">
 		</div>
 		<div class="photo">
 			<img src="./bachelor-bachelorette/image-4.jpeg">
 		</div>
 		<div class="photo">
-			<img src="./bachelor-bachelorette/image-2.jpeg">
-		</div>
-		<div class="photo">
 			<img src="./bachelor-bachelorette/image-5.jpeg">
 		</div>
 		<div class="photo">
-			<img src="./bachelor-bachelorette/image-3.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./bachelor-bachelorette/image.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./bachelor-bachelorette/image-4.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./bachelor-bachelorette/image-2.jpeg">
-		</div>
-		<div class="photo">
-			<img src="./bachelor-bachelorette/image-5.jpeg">
+			<img src="./bachelor-bachelorette/image-8.jpeg">
 		</div>
 		
 		
