--- a/affection.html
+++ b/affection.html
@@ -153,34 +153,34 @@
     </header>
 	<div class="photos">
 		<div class="photo">
-			<img src="./affection/image.jpeg">
+			<img src="./affection/image.jpg">
 		</div>
 		<div class="photo">
-			<img src="./affection/image-11.jpeg">
+			<img src="./affection/image-11.jpg">
 		</div>
 		<div class="photo">
-			<img src="./affection/image-14.jpeg">
+			<img src="./affection/image-14.jpg">
 		</div>
 		<div class="photo">
-			<img src="./affection/image-15.jpeg">
+			<img src="./affection/image-15.jpg">
 		</div>
 		<div class="photo">
-			<img src="./affection/image-20.jpeg">
+			<img src="./affection/image-20.jpg">
 		</div>
 		<div class="photo">
-			<img src="./affection/image-21.jpeg">
+			<img src="./affection/image-21.jpg">
 		</div>
 		<div class="photo">
-			<img src="./affection/image-22.jpeg">
+			<img src="./affection/image-22.jpg">
 		</div>
 		<div class="photo">
-			<img src="./affection/image-4.jpeg">
+			<img src="./affection/image-4.jpg">
 		</div>
 		<div class="photo">
-			<img src="./affection/image-6.jpeg">
+			<img src="./affection/image-6.jpg">
 		</div>
 		<div class="photo">
-			<img src="./affection/image-8.jpeg">
+			<img src="./affection/image-8.jpg">
 		</div>
 		
 		
