--- a/bachelor-bachelorette.html
+++ b/bachelor-bachelorette.html
@@ -153,7 +153,7 @@
     </header>
 	<div class="photos">
 		<div class="photo">
-			<img src="./bachelor-bachelorette/image.jpeg">
+			<img src="./bachelor-bachelorette/image.jpg">
 		</div>
 		<div class="photo">
 			<img src="./bachelor-bachelorette/2018-08-20-0046.jpg">
@@ -165,16 +165,16 @@
 			<img src="./bachelor-bachelorette/2018-08-21-0002.jpg">
 		</div>
 		<div class="photo">
-			<img src="./bachelor-bachelorette/image-11.jpeg">
+			<img src="./bachelor-bachelorette/image-11.jpg">
 		</div>
 		<div class="photo">
-			<img src="./bachelor-bachelorette/image-4.jpeg">
+			<img src="./bachelor-bachelorette/image-4.jpg">
 		</div>
 		<div class="photo">
-			<img src="./bachelor-bachelorette/image-5.jpeg">
+			<img src="./bachelor-bachelorette/image-5.jpg">
 		</div>
 		<div class="photo">
-			<img src="./bachelor-bachelorette/image-8.jpeg">
+			<img src="./bachelor-bachelorette/image-8.jpg">
 		</div>
 		
 		
