--- a/alvin-and-johanna.html
+++ b/alvin-and-johanna.html
@@ -153,21 +153,21 @@
     </header>
 	<div class="photos">
 		<div class="photo">
-			<img src="./alvin-and-johanna/image-3.jpeg">
+			<img src="./alvin-and-johanna/image-3.jpg">
 		</div>
 		<div class="photo">
-			<img src="./alvin-and-johanna/image.jpeg">
+			<img src="./alvin-and-johanna/image.jpg">
 		</div>
 		<div class="photo">
-			<img src="./alvin-and-johanna/image-4.jpeg">
+			<img src="./alvin-and-johanna/image-4.jpg">
 		</div>
 		<div class="photo">
-			<img src="./alvin-and-johanna/image-2.jpeg">
+			<img src="./alvin-and-johanna/image-2.jpg">
 		</div>
 		
 		
 		<div class="photo">
-			<img src="./alvin-and-johanna/image-5.jpeg">
+			<img src="./alvin-and-johanna/image-5.jpg">
 		</div>
 		
 		
