--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
 		<div class="contact-text">
 			
 			<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en">Instagram</a>
-			<p>jesssung @ gmail.com</p>
+			<p>jesssung2 @ gmail.com</p>
 			<p>Jess Sung is a photographer working in Vancouver, Canada.</p>
 		</div>
 		<div class="contact-pic">
