--- a/contact.html
+++ b/contact.html
@@ -152,14 +152,15 @@
 			
     </header>
 	<div class="contact">
+		<!--
 		<div class="contact-pic">
 			<img class="foto" src="contactpic.jpg">
-		</div>	
+		</div>	-->
 		<div class="contact-text">
 			
 			<a target="_blank" href="https://www.instagram.com/jesssung/?hl=en">Instagram</a>
 			<p>jesssung2 @ gmail.com</p>
-			<p>Jess Sung is a 5th generation Chinese settler multidisciplinary artist and death doula in training. Working predominantly in diversity, arts and culture programming in the DTES and on the ancestral and stolen land of the xʷməθkʷəy̓əm, Sḵwx̱wú7mesh and səlilwətaɬ peoples has cemented their lifelong commitment to create a place of safety for rising generations to experience joy, healing and growth together.<br> Their long-term goal is to open a local community space for youth who have lost a parent or caregiver, eventually expanding into grief spaces for individuals and families to receive the community care and support that they need and deserve.</p>
+			<p>Jess Sung is a 5th generation Chinese settler multidisciplinary artist and death doula in training. Working predominantly in diversity, arts and culture programming in the DTES and on the ancestral and stolen land of the xʷməθkʷəy̓əm, Sḵwx̱wú7mesh and səlilwətaɬ peoples has cemented their lifelong commitment to create a place of safety for rising generations to experience joy, healing and growth together.<br><br> Their long-term goal is to open a local community space for youth who have lost a parent or caregiver, eventually expanding into grief spaces for individuals and families to receive the community care and support that they need and deserve.</p>
 		</div>
 	</div>
 <script type="text/javascript" src="script.js"></script>
